--- a/Source/wgo-vmoksha/Wgo.Nancy/WGO.Rest.Server/Wgo.Rest.Server.csproj
+++ b/Source/wgo-vmoksha/Wgo.Nancy/WGO.Rest.Server/Wgo.Rest.Server.csproj
@@ -140,7 +140,9 @@
     <Reference Include="System.Web.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Configs\ioc.xml" />
+    <Content Include="Configs\ioc.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="i\DeensDesk-Portfolio.png" />
     <Content Include="i\ramaraju.jpg" />
     <Content Include="i\senthil.jpg" />
@@ -193,7 +195,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>4848</DevelopmentServerPort>
+          <DevelopmentServerPort>1500</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:57861/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
