renamed WGO to Wgo and added TestHarness

--- a/Source/wgo-vmoksha/Wgo.Nancy/WGO.Rest.Server/Web.config
+++ b/Source/wgo-vmoksha/Wgo.Nancy/WGO.Rest.Server/Web.config
@@ -38,9 +38,9 @@
     </root>
   </log4net>
   <appSettings>
-    <add key ="RavenDb-Url" value="https://1.ravenhq.com/databases/AppHarbor_3157f354-b154-46d9-8252-7ac720e24f6d"/>
-    <add key ="RavenDb-Api" value="56dbc5b8-e0c1-491c-83e3-af765480991f"/>
-    <add key ="RavenDb-Database" value="AppHarbor_3157f354-b154-46d9-8252-7ac720e24f6d"/>
+    <add key ="RavenDb-Url" value="https://1.ravenhq.com/databases/Ranjitha-Document"/>
+    <add key ="RavenDb-Api" value="b9cc2e1f-b9d6-4052-99e1-954214ef6f3e"/>
+    <add key ="RavenDb-Database" value="Ranjitha-Document"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
